--- a/package.json
+++ b/package.json
@@ -4,11 +4,14 @@
   "description": "first tests with Cypress",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "web_headed": "npx cypress open --browser --headed chrome --config cypress.config.js",
+    "mob_headed": "npx cypress open --browser --headed chrome --config-file cypress2.config.js",
+    "web_headless": "npx cypress open --browser --headless chrome --config cypress.config.js",
+    "mob_headless": "npx cypress open --browser --headless chrome --config-file cypress2.config.js"
   },
   "author": "OM",
   "license": "ISC",
   "dependencies": {
-    "cypress": "^8.3.0"
+    "cypress": "^12.3.0"
   }
 }
