--- a/package.json
+++ b/package.json
@@ -6,8 +6,8 @@
   "scripts": {
     "web_headed": "npx cypress open --browser --headed chrome --config cypress.config.js",
     "mob_headed": "npx cypress open --browser --headed chrome --config-file cypress2.config.js",
-    "web_headless": "npx cypress open --browser --headless chrome --config cypress.config.js",
-    "mob_headless": "npx cypress open --browser --headless chrome --config-file cypress2.config.js"
+    "web_headless": "npx cypress run --browser --headless chrome --config cypress.config.js",
+    "mob_headless": "npx cypress run --browser --headless chrome --config-file cypress2.config.js"
   },
   "author": "OM",
   "license": "ISC",
